<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/title_detail_event"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="12dp"
                android:contentDescription="@string/title_favorites"
                app:srcCompat="@drawable/baseline_favorite_border_24"
                app:backgroundTint="?attr/colorPrimary"
                app:tint="@android:color/white" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Text.H1"
                tools:text="Judul Acara"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/tv_event_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                style="@style/Text.BodyMedium"
                tools:text="Diselenggarakan oleh: Nama Penyelenggara" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_city"
                    style="@style/Text.H2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dots"
                    style="@style/Text.H2" />

                <TextView
                    android:id="@+id/tv_event_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/Text.BodyMedium"
                    android:layout_marginStart="8dp"
                    tools:text="Online"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_time"
                    style="@style/Text.H2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dots"
                    style="@style/Text.H2" />

                <TextView
                    android:id="@+id/tv_event_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/Text.BodyMedium"
                    android:layout_marginStart="8dp"
                    tools:text="12 Mei 2025, 10:00 WIB"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_quota"
                    style="@style/Text.H2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dots"
                    style="@style/Text.H2"/>

                <TextView
                    android:id="@+id/tv_event_quota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="8dp"
                    style="@style/Text.BodyMedium"
                    tools:text="25/100"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                tools:text="Deskripsi acara lengkap di sini..."/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cornerRadius="8dp"
                android:text="@string/to_register"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
